--- a/today.html
+++ b/today.html
@@ -107,28 +107,29 @@
     });
   </script>
 
-  <!-- Add JavaScript to handle FatSecret API calls -->
+  <!-- Add JavaScript to handle Spoonacular API calls -->
   <script>
-    const clientId = 'YOUR_CLIENT_ID';
-    const clientSecret = 'YOUR_CLIENT_SECRET';
-    const accessToken = 'YOUR_ACCESS_TOKEN';  // Get this using OAuth flow
+    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';  // Replace with your actual API key
 
     async function fetchFoodData(foodItem) {
-      const url = `https://platform.fatsecret.com/rest/server.api?method=foods.search&search_expression=${foodItem}&oauth_consumer_key=${clientId}&oauth_token=${accessToken}`;
+      const url = `https://api.spoonacular.com/food/ingredients/search?query=${foodItem}&number=2&sort=calories&sortDirection=desc&apiKey=${apiKey}`;
 
       try {
         const response = await fetch(url);
         const data = await response.json();
 
-        if (data.foods) {
-          const food = data.foods.food[0];
-          return food ? food.food_name + ' - ' + food.nutrition_calories + ' calories' : 'Food not found';
+        if (data.results && data.results.length > 0) {
+          const food = data.results[0];
+          return {
+            name: food.name,
+            calories: food.nutrition?.calories || 'No calorie data available'
+          };
         } else {
-          return 'No data found';
+          return { name: 'Food not found', calories: 'No data available' };
         }
       } catch (error) {
         console.error('Error fetching food data:', error);
-        return 'Error fetching data';
+        return { name: 'Error', calories: 'Error fetching data' };
       }
     }
 
@@ -138,7 +139,7 @@
       const sleep = document.getElementById('sleep').value;
       const calories = document.getElementById('calories').value;
 
-      const foodItem = "banana";  // Example food item
+      const foodItem = "banana";  // Example food item, you can replace this with dynamic input
       const foodData = await fetchFoodData(foodItem);
 
       // Log fitness data including calories
@@ -159,7 +160,7 @@
         <td>${log.steps}</td>
         <td>${log.water}</td>
         <td>${log.sleep}</td>
-        <td>${log.calories} / ${log.foodData}</td>
+        <td>${log.calories} / ${log.foodData.name} - ${log.foodData.calories} calories</td>
         <td><button>Edit</button></td>
         <td><button>Delete</button></td>
       `;
