--- a/index.html
+++ b/index.html
@@ -3,26 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Today | Astronaut Fitness Tracker</title>
+  <title>Astronaut Fitness Tracker</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- Particles.js Script -->
+  <script src="script.js" defer></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-3d"></script>
+
+  <style>
+    #particles-js {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .content {
+      position: relative;
+      z-index: 1;
+    }
+
+    #nutritionChart, #caloriesChart, #stepsChart {
+      width: 400px;
+      height: 400px;
+    }
+
+    .inputs {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 1rem;
+    }
+  </style>
 </head>
 <body>
-  <!-- Particles Background -->
   <div id="particles-js"></div>
 
   <nav class="tabbar">
-    <a class="tab-link" href="today.html">
-      <svg xmlns="http://www.w3.org/2000/svg" class="icon" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 18.657A8 8 0 016.343 7.343S7 9 9 10c0-2 .5-5 2.986-7C14 5 16.09 5.777 17.656 7.343A7.975 7.975 0 0120 13a7.975 7.975 0 01-2.343 5.657z"></path>
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.879 16.121A3 3 0 1012.015 11L11 14H9c0 .768.293 1.536.879 2.121z"></path>
-      </svg>
-      <span>Today</span>
-    </a>
-    <!-- Other navigation links here... -->
+    <!-- Tab links (same as in your previous code) -->
   </nav>
 
   <div class="content">
@@ -47,17 +67,11 @@
             <input id="sleep" type="number" step="0.1">
           </div>
           <div>
-            <label for="foodSearch">Search Food (e.g. Banana)</label>
-            <input id="foodSearch" type="text" placeholder="Enter food">
-            <button id="searchFood" onclick="searchFood()">Search</button>
+            <label for="calories">Calories Consumed</label>
+            <input id="calories" type="number">
           </div>
         </div>
-      </section>
-
-      <!-- Display Search Results -->
-      <section>
-        <h2>Search Results</h2>
-        <ul id="searchResults"></ul>
+        <button id="submit">Submit</button>
       </section>
 
       <!-- Fitness Logs Table -->
@@ -70,9 +84,7 @@
               <th>Steps</th>
               <th>Water Intake (L)</th>
               <th>Sleep (Hours)</th>
-              <th>Food</th>
-              <th>Calories</th>
-              <th>Delete</th>
+              <th>Calories Consumed</th>
             </tr>
           </thead>
           <tbody id="logsSection">
@@ -80,107 +92,152 @@
           </tbody>
         </table>
       </section>
+
+      <!-- Charts -->
+      <section>
+        <h2>Charts</h2>
+        <canvas id="nutritionChart"></canvas> <!-- 3D Pie Chart -->
+        <canvas id="caloriesChart"></canvas> <!-- Calories Bar Chart -->
+        <div id="stepsChart">
+          <h3>Steps, Water, and Sleep</h3>
+          <p>Steps: <span id="stepsValue">0</span></p>
+          <p>Water Intake: <span id="waterValue">0</span> L</p>
+          <p>Sleep: <span id="sleepValue">0</span> Hours</p>
+        </div>
+      </section>
     </main>
   </div>
 
-  <!-- Particles.js Initialization -->
+  <!-- Particle.js Initialization -->
   <script>
     particlesJS('particles-js', {
       "particles": {
         "number": {
-          "value": 80, 
+          "value": 80,
           "density": {
             "enable": true,
-            "value_area": 800  
+            "value_area": 800
           }
         },
-        "color": {
-          "value": "#ffffff"  
-        },
-        "shape": {
-          "type": "circle",  
-          "stroke": {
-            "width": 0, 
-            "color": "#000000"
-          }
-        },
-        "size": {
-          "value": 3,  
-          "random": true
-        },
-        "move": {
-          "enable": true,
-          "speed": 2,
-          "direction": "none",  
-          "random": true,
-          "out_mode": "out"
-        }
+        "color": { "value": "#ffffff" },
+        "shape": { "type": "circle" },
+        "size": { "value": 3, "random": true },
+        "move": { "enable": true, "speed": 2, "direction": "none" }
       }
     });
   </script>
 
-  <!-- JS Script for Search and Logging -->
+  <!-- Add JavaScript to handle Spoonacular API calls and chart rendering -->
   <script>
-    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';
-    const logsSection = document.getElementById('logsSection');
-    const searchResults = document.getElementById('searchResults');
+    const apiKey = 'b86ae26b7f844ead91ce96df1eb8df0c';  // Replace with your actual API key
 
-    // Function to search for food ingredients using the Spoonacular API
-    async function searchFood() {
-      const foodQuery = document.getElementById('foodSearch').value;
-      const response = await fetch(`https://api.spoonacular.com/food/ingredients/search?query=${foodQuery}&number=5&sort=calories&sortDirection=desc&apiKey=${apiKey}`);
-      const data = await response.json();
-      
-      if (data.results && data.results.length > 0) {
-        // Clear the previous search results
-        searchResults.innerHTML = '';
-        
-        // Display new search results
-        data.results.forEach(food => {
-          // Get calories from nutrition info
-          const calories = food.nutrition.nutrients.find(nutrient => nutrient.name === "Calories")?.amount || 'N/A';
+    async function fetchFoodData(foodItem) {
+      const url = `https://api.spoonacular.com/food/ingredients/search?query=${foodItem}&number=2&sort=calories&sortDirection=desc&apiKey=${apiKey}`;
 
-          const foodItem = document.createElement('li');
-          foodItem.innerHTML = `
-            <strong>${food.name}</strong> - Calories: ${calories}
-            <button onclick="logFood('${food.name}', ${food.id}, ${calories})">Log Food</button>
-          `;
-          searchResults.appendChild(foodItem);
-        });
-      } else {
-        searchResults.innerHTML = 'No results found';
+      try {
+        const response = await fetch(url);
+        const data = await response.json();
+
+        if (data.results && data.results.length > 0) {
+          const food = data.results[0];
+          return {
+            name: food.name,
+            calories: food.nutrition?.calories || 0,
+            protein: food.nutrition?.protein || 0,
+            carbs: food.nutrition?.carbs || 0,
+            fat: food.nutrition?.fat || 0
+          };
+        } else {
+          return { name: 'Food not found', calories: 0, protein: 0, carbs: 0, fat: 0 };
+        }
+      } catch (error) {
+        console.error('Error fetching food data:', error);
+        return { name: 'Error', calories: 0, protein: 0, carbs: 0, fat: 0 };
       }
     }
 
-    // Function to log the food with calories into the fitness logs
-    async function logFood(foodName, foodId, calories) {
+    // Chart setup
+    let foodData = { protein: 0, carbs: 0, fat: 0, calories: 0 };
+
+    document.getElementById('submit').addEventListener('click', async () => {
       const steps = document.getElementById('steps').value;
       const water = document.getElementById('water').value;
       const sleep = document.getElementById('sleep').value;
+      const calories = document.getElementById('calories').value;
 
-      // Insert log entry into table
-      const newRow = document.createElement('tr');
-      newRow.innerHTML = `
-        <td>${new Date().toLocaleDateString()}</td>
-        <td>${steps}</td>
-        <td>${water}</td>
-        <td>${sleep}</td>
-        <td>${foodName}</td>
-        <td>${calories} kcal</td>
-        <td><button onclick="deleteLog(this)">Delete</button></td>
+      const foodItem = "banana";  // Example food item, you can replace this with dynamic input
+      foodData = await fetchFoodData(foodItem);
+
+      // Log fitness data including calories
+      const log = {
+        date: new Date().toLocaleDateString(),
+        steps,
+        water,
+        sleep,
+        calories,
+        foodData
+      };
+
+      // Inject log into table
+      const tableBody = document.getElementById('logsSection');
+      const row = tableBody.insertRow();
+      row.innerHTML = `
+        <td>${log.date}</td>
+        <td>${log.steps}</td>
+        <td>${log.water}</td>
+        <td>${log.sleep}</td>
+        <td>${log.calories} / ${log.foodData.name} - ${log.foodData.calories} calories</td>
       `;
-      logsSection.appendChild(newRow);
 
-      // Clear inputs
-      document.getElementById('steps').value = '';
-      document.getElementById('water').value = '';
-      document.getElementById('sleep').value = '';
-      document.getElementById('foodSearch').value = '';
-    }
+      // Update charts
+      updateCharts(steps, water, sleep, calories, foodData);
+    });
 
-    function deleteLog(button) {
-      const row = button.closest('tr');
-      row.remove();
+    function updateCharts(steps, water, sleep, calories, foodData) {
+      // Update Text Chart
+      document.getElementById('stepsValue').textContent = steps;
+      document.getElementById('waterValue').textContent = water;
+      document.getElementById('sleepValue').textContent = sleep;
+
+      // Update Regular Chart (Calories)
+      const caloriesChart = new Chart(document.getElementById('caloriesChart'), {
+        type: 'bar',
+        data: {
+          labels: ['Calories'],
+          datasets: [{
+            label: 'Calories Consumed',
+            data: [calories],
+            backgroundColor: 'rgba(255, 99, 132, 0.2)',
+            borderColor: 'rgba(255, 99, 132, 1)',
+            borderWidth: 1
+          }]
+        }
+      });
+
+      // Update 3D Pie Chart (Nutrition)
+      const nutritionChart = new Chart(document.getElementById('nutritionChart'), {
+        type: 'pie',
+        data: {
+          labels: ['Protein', 'Carbs', 'Fat'],
+          datasets: [{
+            data: [foodData.protein, foodData.carbs, foodData.fat],
+            backgroundColor: ['#FF5733', '#33FF57', '#3357FF'],
+            borderColor: ['#FF5733', '#33FF57', '#3357FF'],
+            borderWidth: 1
+          }]
+        },
+        options: {
+          plugins: {
+            tooltip: {
+              callbacks: {
+                label: function (context) {
+                  return context.label + ': ' + context.raw + 'g';
+                }
+              }
+            }
+          }
+        }
+      });
     }
   </script>
 </body>
