--- a/index.html
+++ b/index.html
@@ -35,18 +35,51 @@
       grid-template-columns: 1fr 1fr;
       gap: 1rem;
     }
+
+    .tabbar {
+      background-color: #333;
+      overflow: hidden;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 10;
+    }
+
+    .tabbar a {
+      float: left;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+    }
+
+    .tabbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
+
+    .tabbar .active {
+      background-color: #4CAF50;
+      color: white;
+    }
+
   </style>
 </head>
 <body>
   <div id="particles-js"></div>
 
+  <!-- Original Navbar -->
   <nav class="tabbar">
-    <!-- Tab links (same as in your previous code) -->
+    <a href="index.html" class="active">Home</a>
+    <a href="today.html">Today</a>
+    <a href="logs.html">Logs</a>
+    <a href="profile.html">Profile</a>
   </nav>
 
   <div class="content">
     <header>
-      <h1>Today</h1>
+      <h1>Astronaut Fitness Tracker</h1>
     </header>
     <main>
       <!-- Log Fitness Data -->
@@ -221,22 +254,23 @@
           datasets: [{
             label: 'Calories Consumed',
             data: [calories],
-            backgroundColor: 'rgba(255, 99, 132, 0.2)',
-            borderColor: 'rgba(255, 99, 132, 1)',
+            backgroundColor: ['rgba(75, 192, 192, 0.2)'],
+            borderColor: ['rgba(75, 192, 192, 1)'],
             borderWidth: 1
           }]
         }
       });
 
-      // Update 3D Pie Chart (Nutrition)
+      // Update Pie Chart (Nutritional Info)
       const nutritionChart = new Chart(document.getElementById('nutritionChart'), {
         type: 'pie',
         data: {
           labels: ['Protein', 'Carbs', 'Fat'],
           datasets: [{
+            label: 'Nutritional Info',
             data: [foodData.protein, foodData.carbs, foodData.fat],
-            backgroundColor: ['#FF5733', '#33FF57', '#3357FF'],
-            borderColor: ['#FF5733', '#33FF57', '#3357FF'],
+            backgroundColor: ['rgba(54, 162, 235, 0.2)', 'rgba(255, 159, 64, 0.2)', 'rgba(153, 102, 255, 0.2)'],
+            borderColor: ['rgba(54, 162, 235, 1)', 'rgba(255, 159, 64, 1)', 'rgba(153, 102, 255, 1)'],
             borderWidth: 1
           }]
         }
