--- a/index.html
+++ b/index.html
@@ -33,51 +33,60 @@
       gap: 1rem;
     }
 
-    /* Sidebar styling */
-    .tabbar {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 250px;
-      height: 100%;
-      background-color: #2c3e50;
-      display: flex;
-      flex-direction: column;
-      padding-top: 20px;
-      padding-left: 10px;
-      z-index: 10;
-    }
+    /* Sidebar Styling */
+.tabbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 250px; /* Fixed width for the navbar */
+  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(12px);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  padding: 1rem 0;
+}
 
-    .tabbar a {
-      display: flex;
-      align-items: center;
-      padding: 15px;
-      color: white;
-      text-decoration: none;
-      margin-bottom: 15px;
-    }
+img.trophy-icon {
+  width: 30px;
+  height: auto;
+  display: inline-block;
+  margin-bottom: 0;
+}
 
-    .tabbar a:hover {
-      background-color: #34495e;
-      border-radius: 5px;
-    }
+.tabbar a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: 1rem;
+  color: #bbb;
+  transition: color 0.3s, background 0.3s;
+}
 
-    .tabbar .active {
-      background-color: #4CAF50;
-      color: white;
-    }
+.tabbar a:hover {
+  background: rgba(255, 255, 255, 0.1);
+  color: #81c7f5;
+}
 
-    .tabbar svg {
-      width: 24px;
-      height: 24px;
-      margin-right: 10px;
-    }
+.tabbar a.active {
+  background: rgba(81, 199, 245, 0.2);
+  color: #81c7f5;
+}
 
-    .trophy-icon {
-      width: 24px;
-      height: 24px;
-      margin-right: 10px;
-    }
+.tabbar .icon {
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-bottom: 0.5rem;
+  fill: currentColor;
+}
+
+.tabbar span {
+  font-size: 0.75rem;
+  text-transform: uppercase;
+}
   </style>
 </head>
 <body>
